Fix link contrast for light theme

--- a/src/scss/definitions/_themes.scss
+++ b/src/scss/definitions/_themes.scss
@@ -8,7 +8,7 @@ $themes: (
     background: #fbfdff,
     background-accent: #f5f7f9,
     foreground: #223344,
-    action: #2d8dd4,
+    action: #0e75c2,
     action-foreground: #fff,
     action-secondary: #e0e3e6,
   ),
